@@ -19,10 +19,10 @@
 **/
 ?>
 <?php
-	class CVar extends CTag
+	/* private */ class CVarTag extends CTag
 	{
 /* public */
-		function CVar($name="",$value="0")
+		function CVarTag($name="",$value="0")
 		{
 			parent::CTag('input','no');
 			$this->options['type'] = 'hidden';
@@ -32,6 +32,49 @@
 		function SetValue($value)
 		{ 
 			$this->options['value'] = $value;
+		}
+	}
+
+	/* public */ class CVar
+	{
+		var $var_container = array();
+		var $var_name;
+
+		function CVar($name,$value=null)
+		{
+			$this->var_name = $name;
+
+			$this->SetValue($value);
+		}
+		
+		function SetValue($value)
+		{
+			$this->var_container = array();
+
+			if(null == $value) return;
+
+			if(is_array($value))
+			{
+				foreach($value as $item)
+				{
+					if( null == $item ) continue;
+					array_push($this->var_container, new CVarTag($this->var_name.'[]', $item));
+				}
+				return;
+			}
+
+			array_push($this->var_container, new CVarTag($this->var_name, $value));
+		}
+
+		function ToString()
+		{
+			$res = "";
+
+			foreach($this->var_container as $item)
+			{
+				$res .= $item->ToString();
+			}
+			return $res;
 		}
 	}
 ?>
